--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,21 @@
 # * https://www.objc.io/issues/6-build-tools/travis-ci/
 # * https://github.com/supermarin/xcpretty#usage
 
-osx_image: xcode7.3
 language: objective-c
+
+osx_image: xcode10.1
+env:
+  matrix:
+   - TEST_SDK=iphonesimulator12.1 OS=12.1 NAME='iPhone 7'
+   # - TEST_SDK=iphonesimulator12.1 OS=9.3 NAME='iPhone 6s'
+
 # cache: cocoapods
 # podfile: Example/Podfile
-# before_install:
-# - gem install cocoapods # Since Travis is not always on latest version
+before_install:
+  - gem install cocoapods # Since Travis is not always on latest version
 # - pod install --project-directory=Example
 script:
-- set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/SuLib.xcworkspace -scheme SuLib-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
-- pod lib lint
+  - set -o pipefail && xcodebuild test -enableCodeCoverage YES -workspace Example/MyLib.xcworkspace -scheme MyLib -sdk $TEST_SDK -destination "platform=iOS Simulator,OS=$OS,name=$NAME" ONLY_ACTIVE_ARCH=YES
+  - pod lib lint
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
